deployments/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sammo-fight-iq
  labels:
    app: sammo-fight-iq
    app.kubernetes.io/name: sammo-fight-iq
spec:
  to:
    kind: Service
    name: sammo-fight-iq
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
